05-network/03-network-policy/env.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: frontend
  labels:
    name: frontend
---
apiVersion: v1
kind: Namespace
metadata:
  name: backend
  labels:
    name: backend
---
apiVersion: v1
kind: Namespace
metadata:
  name: db
  labels:
    name: db
---
apiVersion: v1
kind: Pod
metadata:
  name: frontend-pod
  namespace: frontend
  labels:
    app: frontend
    tier: web
spec:
  containers:
  - name: frontend
    image: devwikirepo/network-tool
    command: ["sh", "-c", "while true; do nc -l -p 80 > /dev/null; done"]
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: backend-pod
  namespace: backend
  labels:
    app: backend
    tier: api
spec:
  containers:
  - name: backend
    image: devwikirepo/network-tool
    command: ["sh", "-c", "while true; do nc -l -p 8080 > /dev/null; done"]
    ports:
    - containerPort: 8080
---
apiVersion: v1
kind: Pod
metadata:
  name: db-pod
  namespace: db
  labels:
    app: db
    tier: db
spec:
  containers:
  - name: db
    image: devwikirepo/network-tool
    command: ["sh", "-c", "while true; do nc -l -p 5432 > /dev/null; done"]
    ports:
    - containerPort: 5432
