05-network/03-network-policy/01-db-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-deny-all
  namespace: db
spec:
  podSelector:
    matchLabels:
      tier: db
  policyTypes:
  - Ingress
  - Egress
